2016-11-14  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* qsmr-beta-4

	* Mscripts_arts/q2_artscfile_full.m (cfile_abs): Changed
	extpolfac in propmat_clearskyAddFromLookup to 1.

2016-11-13  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* qsmr-beta-3

	* Mscripts_arts/q2_inv.m (subfun4l2): Q.T.L2NAME now used. Added
	two fields to L2I, SBpath and Tsat.

	* Mscripts_arts/q2_oemiter.m (q2_oemiter): Q.T.LIMITS introduced.

	* Mscripts_arts/q2_arts_y.m: Changed p_std to p_stnd.

2016-11-11  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* qsmr-beta-2

	* Mscripts_arts/q2_arts_y.m:
	* Mscripts_arts/q2_artscfile_full.m: Partition functions are now
	read from file, instead of using the internal ones.

2016-11-10  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* qsmr-beta-1

	* From now on this file must contain a version number on line 3.
	Follow the example above.

	* This is the first version with data and settings moved to
	qsmr_data. Skipping all details for this commit.

2016-10-24 Jimmy Petersson  <jimmy@molflow.com>

	* runscript.m: Adapt to L2C.

2016-10-23  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Settings/q_meso.m:
	* Settings/q_std.m: New QFILT fields added.

	* Settings/q_fields.rst: Introduced a number of QFILT fields.

	* Mscripts_arts/q2_inv.m (q2_inv): Introduced L2C that required
	some reorganisation.

	* Mscripts_database/l1b_adjust_to_q.m: Some reorganisation and
	writes messages to L2C.

	* Mscripts_database/l1b_filter.m: Now considers QFILT settings and
	writes messages to L2C.

2016-10-12  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Mscripts_atmlab/dimens.m: Copied from Atmlab.

2016-09-23  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Mscripts_arts/q2_inv.m (subfun4retqs): Species retrieval grid
	now named with iq, and not i as before. This to aviod a naming
	clash with temperature grid, that could happen before for some
	situations.

2016-09-23  Patrick Eriksson  <patrick.eriksson@chalmers.se>
