@@ -1,0 +1,9 @@
+% Q2_VERSION   Returns a string identifying the present Qsmr version
+%
+% FORMAT   q2_version
+
+% 2016-11-15 Patrick Eriksson
+
+function v = q2_version
+
+v = 'qsmr-beta-5';
